--- a/public_html/pages/blog.html
+++ b/public_html/pages/blog.html
@@ -1,1 +1,6 @@
 <div>BLOG TODO write content</div>
+
+    <button id="loadTestDialog" class="loadDialog" data-url="dialogs/test.html" data-target="myDialog" data-timeout="0">Dialog</button>
+    <button id="loadTestDialog1" class="loadDialog" data-url="dialogs/test_1.html" data-target="myDialog" data-timeout="0">Dialog_1</button>    
+    <dialog id="myDialog" aria-labelledby="dialog-name"></dialog>
+
