--- a/public_html/pages/index.html
+++ b/public_html/pages/index.html
@@ -25,4 +25,20 @@
         &lt;button data-href="http://localhost" data-confirm="Do you realy want?" class="linkButton" title="Localhost"&gt;Home&lt;/button&gt;<br />
         &lt;a data-href="https://ya.ru/" data-confirm="Do you realy want?" class="linkButton" title="Ya.ru" href="#" target="_blank"&gt;Home&lt;/a&gt;<br />
     </code>
+    
+    <table id="myTable">
+        <tr>
+            <th>Header</th>
+            <th>Header2</th>
+        </tr>
+        <tr>
+            <td>Cell1</td>
+            <td>Cell2</td>
+        </tr>
+        <tr>
+            <td>Cell3</td>
+            <td>Cell4</td>
+        </tr>
+    </table>
+    
 </div>
