Новая версия c динамической загрузкой js для диалогов

--- a/public_html/dialogs/test.html
+++ b/public_html/dialogs/test.html
@@ -5,6 +5,6 @@
 
 <div>
   <button class="actionClose" data-target="myDialog" id="cancelBtn" value="cancel" onclick="console.log('close dialog');">Cancel</button>
-  <button id="confirmBtn" value="default">Confirm</button>
+  <button id="confirmBtn" value="default" onclick="testClick()">Confirm</button>
 </div>
 
