Подгружение стилей для диалога при загрузке диалога

--- a/public_html/dialogs/test.html
+++ b/public_html/dialogs/test.html
@@ -8,3 +8,11 @@
   <button id="confirmBtn" value="default" onclick="testClick()">Confirm</button>
 </div>
 
+<style>
+#myDialog::backdrop {
+    background-color: rgb(244, 4, 16);
+    backdrop-filter: blur(15px);
+}    
+    
+</style>
+
